--- a/css/style.css
+++ b/css/style.css
@@ -533,7 +533,7 @@ color: var(--hover);
   }
   
   .branch {
-    max-width: 100%;
+    max-width: 80%;
     height: auto;
     object-fit: contain; 
     border-radius: 15%;
@@ -587,6 +587,7 @@ color: var(--hover);
     #darkmode {
     font-size: 22px;
     cursor: pointer;
+
     }
 
 
@@ -632,9 +633,9 @@ color: var(--hover);
   #darkmode {
       /* Adjust the dark mode icon style if needed */
       font-size: 22px; 
-      position: absolute;
+      position: relative;
       top: 0.7rem;
-      right: 2rem;
+      right: -20px;
       vertical-align: middle;
   }
 
