--- a/css/style.css
+++ b/css/style.css
@@ -347,7 +347,8 @@ color: var(--hover);
         }
         .portfolio-content {
         display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(280px, auto));
+        padding: 20px;
+        grid-template-columns: repeat(auto-fit, minmax(250px, auto));
         gap: 1rem;
         margin-top: 2rem;
         }
