--- a/gallery/index.css
+++ b/gallery/index.css
@@ -1,3 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400&display=swap');
+@import url();
+
+
 :root {
   --main-color: #98a9ab;
   --bg-color: #f4efef;
@@ -141,6 +145,668 @@ body {
     left: 52%
     
   }
+
+
+/* Google Fonts */
+
+
+* {
+margin: 0;
+padding: 0;
+box-sizing: border-box;
+list-style: none;
+text-decoration: none;
+scroll-behavior: smooth;
+scroll-padding-top: 2rem;
+font-family: "Quicksand", sans-serif;
+-moz-osx-font-smoothing: grayscale;
+-webkit-font-smoothing: antialised;
+line-height: 1.5;
+
+
+}
+:root {
+--main-color: #98a9ab;
+--bg-color: #f4efef;
+--text-color: #293030;
+--second-text:#ffe521;
+accent-color: hsl(4, 43%, 80%);
+--shadow-color: hsl(0, 15%, 25%);
+--hover: #cdb4b3;
+
+--big-font: 2rem;
+--medium-font: 1rem;
+--p-font: 0.941rem;
+}
+
+
+/* mobile/default view */
+
+:root {
+--big-font: 1.5rem;
+--medium-font: 0.9rem;
+}
+
+
+body.active {
+--text-color: #e4d8a4;
+--bg-color: #2e343a;
+--shadow-color: rgba(255, 255, 255, 0.2); /* Example: Lighter shadow for dark mode */
+  --hover: rgba(255, 255, 255, 0.4); /* Adjust as needed */
+}
+body {
+background: var(--bg-color);
+color: var(--text-color);
+}
+*::selection {
+color: var(--bg-color);
+background: var(--main-color);
+}
+.heading {
+text-align: center;
+margin-top: 2rem;
+}
+
+.heading h2 {
+  font-size: 18px;
+  }
+  
+  .heading h4{
+  text-align: center;
+  font-size: 15px;
+  }
+  
+  
+  
+  .heading span {
+  font-size: var(--p-font);
+  
+  }
+  header {
+  position: fixed;
+  width: 100%;
+  top: 0;
+  right: 0;
+  z-index: 1000;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background: var(--bg-color);
+  padding: 13px 10%;
+  transition: 0.2s;
+  box-shadow: -3px -3px 7px var(--shadow-color),
+                2px 2px 5px var(--hover);
+  }
+
+
+
+  .logo {
+  font-size: 1rem;
+  font-weight: 600;
+  font-family: "Quicksand", sans-serif;
+  color: var(--text-color);
+  }
+  
+  
+/* // */
+.navbar {
+display: flex;
+flex-direction: column;
+position: absolute;
+top: -500px; /* Initially hidden */
+left: 0;
+right: 0;
+background: var(--bg-color);
+transition: top 0.3s;
+text-align: center;
+}
+
+.navbar.active {
+top: 100%; /* Show menu */
+}
+
+.navbar a {
+padding: 1.5rem;
+display: block;
+color: var(--text-color);
+}
+
+
+/* // */
+
+/* signature pricture */
+.branch-container {
+position: relative;
+width: 100%;
+height: auto;
+display: none;
+justify-content: center;
+align-items: center;
+margin-top: 20vh;
+}
+
+.branch {
+max-width: 100%;
+height: auto;
+object-fit: contain; /* Ensures the image fits within the container without stretching */
+border-radius: 15%;
+/* animation: float 5s infinite; */
+}
+
+  
+#darkmode {
+font-size: 22px;
+cursor: pointer;
+}
+
+.social {
+display: flex;
+flex-direction: column;
+padding-left: 15px;
+}
+
+
+.social a {
+margin-bottom: 1rem;
+font-size: 22px;
+color: var(--text-color);
+}
+.social a:hover {
+color: var(--hover);
+}
+
+
+/* blinking arrow */
+  .arrow-container {
+    position: relative;
+    margin-top: -5%;
+    display: flex;
+    justify-content: center;
+    
+    }
+    
+    .arrow {
+    width: 30px;
+    height: 30px;
+    border: solid var(--hover);
+    border-width: 0 3px 3px 0;
+    border-radius: 5%;
+    transform: rotate(45deg);
+    animation: blink 3s infinite;
+    }
+    
+    @keyframes blink {
+    0% {
+      opacity: 1;
+    }
+    50% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+    }
+    
+    @keyframes glowing {
+    0%, 100% {
+      box-shadow: 0 0 5px 5px --hover; /* Glowing effect */
+    }
+    50% {
+      box-shadow: none;
+    }
+    }
+
+
+    
+    
+  .home {
+    position: relative;
+    width: 100%;
+    min-height: 98vh;
+    display: grid;
+    grid-template-columns: 0.5fr 1fr 1fr ;
+    align-items: center;
+    gap: 1.2rem;
+    }
+    .home-img {
+    order: 3;
+    }
+    .home-img img {
+    width: 100%;
+    }
+    .home-text span {
+    font-size: var(--medium-font);
+    font-weight: 500;
+    margin-top: 50%;
+    }
+    .home-text h1 {
+    font-size: var(--big-font);
+    margin-top: 3%;
+    margin-bottom: 5%;
+    }
+    .home-text h2 {
+    font-size: 1.1rem;
+    font-weight: 400;
+    margin-bottom: 1rem;
+    }
+    .home-text p {
+    font-size: var(--p-font);
+    font-weight: 400;
+    margin: 0.7rem 0 1rem;
+    }
+
+    .about-container {
+      display: flex;
+      flex-direction: column;
+      
+      margin-top: 2rem;
+      }
+      
+      .about-img img {
+      width: 80%;
+      border-radius: 0.5rem;
+      }
+      .about-text p {
+      font-size: var(--p-font);
+      font-weight: 400;
+      text-align: justify;
+      padding: 10%;
+      }
+      .information {
+      margin: 1rem 0 1.4rem;
+      padding: 10%;
+      }
+      .information .info-box {
+      display: flex;
+      align-items: center;
+      margin-bottom: 1.4rem;
+      color: #293030;
+      }
+      .information .info-box .bx {
+      font-size: 22px;
+      }
+      .information .info-box span {
+      font-weight: 400;
+      margin-left: 1rem;
+      }
+      .skills-container {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      align-items: center;
+      gap: 1rem;
+      margin-top: 4rem;
+      }
+      .skills-img img {
+      width: 120%;
+      height: auto;
+      padding-left: 3rem;
+      object-position: center;
+      }
+      
+      
+      
+      .services-content {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(200px, auto));
+      justify-content: center;
+      gap: 1rem;
+      margin-top: 2rem;
+      }
+      .services-box {
+      padding: 20px;
+      gap: 10px;
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+      border-radius: 0.5rem;
+      border-bottom: 2px solid var(--main-color);
+      box-shadow: 0 2px 7px var(--shadow-color);
+      }
+      .services-box:hover{
+      background-color: var(--hover);
+      }
+      
+      .services-box h3 {
+      font-size: 1rem;
+      font-weight: 600;
+      margin: 0.7rem 0 0.4rem;
+      }
+      .services-box:hover h3{
+      color: var(text-color);
+      }
+      .services-box .bx {
+      padding-top: 2rem;
+      font-size: 54px;
+      color: var(--text-color);
+      }
+      .services-box:hover .bx{
+      color: var(--text-color);
+      }
+      .services-box a {
+      color: var(--text-color);
+      font-size: var(--p-font);
+      font-weight: 500;
+      }
+      .services-box:hover a{
+      color: var(--hover);
+      }
+      .portfolio-content {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(280px, auto));
+      gap: 1rem;
+      margin-top: 2rem;
+      }
+      
+      .portfolio-text p {
+      font-size: 15px;
+      font-weight: 400;
+      text-align: center;
+      margin-top: 10px;
+      margin-bottom: 10px;
+      }
+      .portfolio-img {
+      overflow: hidden;
+      border-radius: 0.5rem;
+      box-shadow: 0 1px 6px var(--shadow-color);
+      
+      }
+      .portfolio-img img {
+      width: 100%;
+      display: block;
+      }
+      .portfolio-img img:hover {
+      transform: scale(1.1);
+      transition: 1s;
+      
+      }
+      
+      .portfolio-img {
+      position: relative;
+      }
+      
+      .img-text {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      text-align: center;
+       /* Set the desired text color */
+      /* background-color: rgba(0, 0, 0, 0.7); Set the desired background color and opacity */
+      padding: 10px;
+      width: 80%; /* Adjust the width as needed */
+      }
+      
+      .img-text h3 {
+      margin-bottom: 5px;
+      font-size: 20px; /* Set the desired font size */
+      }
+      
+      .img-text p {
+      margin: 0;
+      }
+      
+      .overlay {
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      height: 100%;
+      width: 100%;
+      opacity: 0;
+      transition: .5s ease;
+      background-color: #FFFFFF;
+      }
+      
+      .container:hover .overlay {
+      opacity: 1;
+      }
+      
+      .Footer {
+      display: grid;
+      place-items: center;
+      padding: 20px;
+      background: var(--bg-color);
+      color: var(--text-color);
+      }
+      .Footer h4 {
+      margin-top: 7rem;
+      font-size: 1rem;
+      margin-bottom: 7rem;
+      }
+      .Footer-social a i{
+      color: var(accent-color);
+      font-size: 25px;
+      margin-left: 10px;
+      text-align: center;
+      line-height: 40px;
+      background-color: var(--bg-color);
+      border-radius: 50%;
+      width: 40px;
+      height: 40px;
+      }
+      .copyright {
+      padding: 20px;
+      background: var(--main-color);
+      text-align: center;
+      color: var(--bg-color);
+      }
+      .copyright a{
+      color: var(--shadow-color);
+      }
+/* accessibility code */
+
+#jump{
+position: absolute;
+left: -5000px;  
+z-index: 2;
+padding: 5px 10px; 
+color: black;
+border: #fff 2px solid;
+border-radius: 10px;
+}
+
+#jump:focus { 
+left: -500px;  
+position: absolute;
+ 
+top: 100px;
+z-index: 2000;
+padding: 5px 10px; 
+color: black;
+border: #fff 2px solid;
+border-radius: 10px;
+}
+
+@media screen and (prefers-reduced-motion: reduce) {
+img {
+   transition: none;
+}
+
+.arrow{
+   animation: none;
+}
+}
+
+
+
+/* menu icon toggle */
+#menu-icon {
+font-size: 24px;
+cursor: pointer;
+z-index: 10001;
+padding-left: 80%;
+display: block; /* Visible on mobile */
+}
+
+#menu-icon:hover {
+color: var(--hover);
+}
+
+/* tablet view */
+@media (min-width: 768px) {
+
+section {
+  padding: 50px 10%;
+}
+
+
+.heading h2, .heading h4 {
+  font-size: larger;
+}
+
+
+.about-container, .skills-container {
+  grid-template-columns: repeat(2, 1fr);
+}
+
+.logo {
+  font-size: 1.61rem;
+  font-weight: 700;
+  
+  }
+  
+.branch-container {
+  position: relative;
+  width: 100%;
+  height: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20vh;
+}
+
+.branch {
+  max-width: 80%;
+  height: auto;
+  object-fit: contain; 
+  border-radius: 15%;
+  /* animation: float 5s infinite; */
+}
+.about-container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 1rem;
+  margin-top: 2rem;
+  }
+  
+  .about-img img {
+  width: 80%;
+  border-radius: 0.5rem;
+  }
+
+header {
+  position: fixed;
+  width: 100%;
+  top: 0;
+  right: 0;
+  z-index: 1000;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background: var(--bg-color);
+  padding: 13px 10%;
+  transition: 0.2s;
+  box-shadow: -3px -3px 7px var(--shadow-color),
+                2px 2px 5px var(--hover);
+  }
+ 
+.navbar {
+  display: flex;
+  }
+.navbar a {
+  font-size: 1rem;
+  padding: 10px 20px;
+  color: var(--text-color);
+  
+  font-weight: 500;
+  }
+  .navbar a:hover {
+  color: var(--hover);
+  }
+  #menu-icon {
+  
+  display: none;
+  }
+  #darkmode {
+  font-size: 22px;
+  cursor: pointer;
+
+  }
+
+
+
+    .navbar a {
+    font-size: 1rem;
+    padding: 10px 20px;
+    color: var(--text-color);
+    font-weight: 500;
+    }
+  
+  
+  .navbar a {
+    padding: 1.5rem;
+    display: block;
+    color: var(--text-color);
+  }
+  
+
+  header {
+    padding: 13px 10%; /* Adjust the padding for larger screens */
+}
+
+
+
+.navbar {
+    display: flex; 
+    flex-direction: row; 
+    position: relative; 
+    top: auto; 
+    justify-content: center; 
+}
+
+.navbar a {
+    padding: 10px 20px; /* Adjust the padding for navbar links */
+    display: inline-block; /* Display links in line */
+}
+
+#menu-icon {
+    display: none; /* Hide the hamburger menu icon on desktop */
+}
+
+#darkmode {
+    /* Adjust the dark mode icon style if needed */
+    font-size: 22px; 
+    position: relative;
+    top: 0.7rem;
+    right: -25px;
+    vertical-align: middle;
+}
+
+
+}
+/* desktop view */
+
+@media (min-width: 1024px) {
+header {
+  padding: 13px 10%;
+}
+
+
+:root {
+  --big-font: 2rem;
+  --medium-font: 1rem;
+}
+
+
+.home {
+  grid-template-columns: 0.2fr 1fr 1fr;
+}
+
+}
+
 
 
 /* 
